Implement Legendre expansion filter for change in scattering angle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -420,6 +420,7 @@ set(LIBOPENMC_FORTRAN_SRC
   src/tallies/tally_filter_distribcell.F90
   src/tallies/tally_filter_energy.F90
   src/tallies/tally_filter_energyfunc.F90
+  src/tallies/tally_filter_legendre.F90
   src/tallies/tally_filter_material.F90
   src/tallies/tally_filter_mesh.F90
   src/tallies/tally_filter_meshsurface.F90
