--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -427,6 +427,7 @@ set(LIBOPENMC_FORTRAN_SRC
   src/tallies/tally_filter_mu.F90
   src/tallies/tally_filter_polar.F90
   src/tallies/tally_filter_sph_harm.F90
+  src/tallies/tally_filter_sptl_legendre.F90
   src/tallies/tally_filter_surface.F90
   src/tallies/tally_filter_universe.F90
   src/tallies/tally_header.F90
