--- a/.travis.yml
+++ b/.travis.yml
@@ -30,17 +30,15 @@ env:
     - OMP=y MPI=n PHDF5=n
     - OMP=n MPI=y PHDF5=n
     - OMP=n MPI=y PHDF5=y
-
 before_install:
   - sudo add-apt-repository ppa:nschloe/hdf5-backports -y
   - sudo apt-get update -q
   - sudo apt-get install libhdf5-serial-dev libhdf5-mpich-dev -y
-
 install:
   - ./tools/ci/travis-install.sh
-
 before_script:
   - ./tools/ci/travis-before-script.sh
-
 script:
   - ./tools/ci/travis-script.sh
+after_success:
+  - coveralls -d tests/.coverage
