--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -435,6 +435,8 @@ set(LIBOPENMC_FORTRAN_SRC
   src/tallies/trigger_header.F90
 )
 set(LIBOPENMC_CXX_SRC
+  src/cell.cpp
+  src/cell.h
   src/error.h
   src/hdf5_interface.h
   src/random_lcg.cpp
