Have openmc_init take a MPI_Comm*

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -434,6 +434,7 @@ set(LIBOPENMC_FORTRAN_SRC
 )
 set(LIBOPENMC_CXX_SRC
   src/error.h
+  src/initialize.cpp
   src/hdf5_interface.h
   src/hdf5_interface.cpp
   src/random_lcg.cpp
