Added C++ math functions, now to incorporate them one by one....

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -438,6 +438,8 @@ set(LIBOPENMC_FORTRAN_SRC
 set(LIBOPENMC_CXX_SRC
   src/error.h
   src/hdf5_interface.h
+  src/math_functions.h
+  src/math_functions.cpp
   src/random_lcg.cpp
   src/random_lcg.h
   src/surface.cpp
