It works! Replaced all mgxs_header functionality with the C++ version and a mgxs_interface module to act as the go-between the C++ and Fortran

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -363,7 +363,7 @@ set(LIBOPENMC_FORTRAN_SRC
   src/mesh_header.F90
   src/message_passing.F90
   src/mgxs_data.F90
-  src/mgxs_header.F90
+  src/mgxs_interface.F90
   src/multipole_header.F90
   src/nuclide_header.F90
   src/output.F90
@@ -380,7 +380,6 @@ set(LIBOPENMC_FORTRAN_SRC
   src/reaction_header.F90
   src/relaxng
   src/sab_header.F90
-  src/scattdata_header.F90
   src/secondary_correlated.F90
   src/secondary_kalbach.F90
   src/secondary_nbody.F90
@@ -439,11 +438,13 @@ set(LIBOPENMC_CXX_SRC
   src/math_functions.cpp
   src/message_passing.cpp
   src/mgxs.cpp
+  src/mgxs_interface.cpp
   src/plot.cpp
   src/random_lcg.cpp
   src/scattdata.cpp
   src/simulation.cpp
   src/state_point.cpp
+  src/string_functions.cpp
   src/surface.cpp
   src/xml_interface.cpp
   src/xsdata.cpp
