Use FindOpenMP to set flags. Bump required CMake version to 3.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
 project(openmc Fortran C CXX)
 
 # Setup output directories
@@ -72,15 +72,14 @@ endif()
 # versions, we manually add the flags. However, at some point in time, the
 # manual logic can be removed in favor of the block below
 
-#if(NOT (CMAKE_VERSION VERSION_LESS 3.1))
-#  if(openmp)
-#    find_package(OpenMP)
-#    if(OPENMP_FOUND)
-#      list(APPEND f90flags ${OpenMP_Fortran_FLAGS})
-#      list(APPEND ldflags ${OpenMP_Fortran_FLAGS})
-#    endif()
-#  endif()
-#endif()
+if(openmp)
+  find_package(OpenMP)
+  if(OPENMP_FOUND)
+    list(APPEND f90flags ${OpenMP_Fortran_FLAGS})
+    list(APPEND cxxflags ${OpenMP_CXX_FLAGS})
+    list(APPEND ldflags ${OpenMP_Fortran_FLAGS})
+  endif()
+endif()
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
@@ -108,10 +107,6 @@ if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
     list(REMOVE_ITEM f90flags -O2)
     list(APPEND f90flags -O3)
   endif()
-  if(openmp)
-    list(APPEND f90flags -fopenmp)
-    list(APPEND ldflags -fopenmp)
-  endif()
   if(coverage)
     list(APPEND f90flags -coverage)
     list(APPEND ldflags -coverage)
@@ -131,10 +126,6 @@ elseif(CMAKE_Fortran_COMPILER_ID STREQUAL Intel)
   endif()
   if(optimize)
     list(APPEND f90flags -O3)
-  endif()
-  if(openmp)
-    list(APPEND f90flags -qopenmp)
-    list(APPEND ldflags -qopenmp)
   endif()
 
 elseif(CMAKE_Fortran_COMPILER_ID STREQUAL PGI)
@@ -169,10 +160,6 @@ elseif(CMAKE_Fortran_COMPILER_ID STREQUAL XL)
   if(optimize)
     list(REMOVE_ITEM f90flags -O2)
     list(APPEND f90flags -O3)
-  endif()
-  if(openmp)
-    list(APPEND f90flags -qsmp=omp)
-    list(APPEND ldflags -qsmp=omp)
   endif()
 
 elseif(CMAKE_Fortran_COMPILER_ID STREQUAL Cray)
@@ -239,9 +226,6 @@ endif()
 if(optimize)
   list(REMOVE_ITEM cxxflags -O2)
   list(APPEND cxxflags -O3)
-endif()
-if(openmp)
-  list(APPEND cxxflags -fopenmp)
 endif()
 
 # Show flags being used
