--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -393,6 +393,7 @@ add_library(libopenmc SHARED
   src/message_passing.cpp
   src/mgxs.cpp
   src/mgxs_interface.cpp
+  src/particle.cpp
   src/plot.cpp
   src/pugixml/pugixml_c.cpp
   src/random_lcg.cpp
