Convert Function1D, Polynomial, and Tabulated1D types

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -395,6 +395,7 @@ add_library(libopenmc SHARED
   src/distribution.cpp
   src/distribution_multi.cpp
   src/distribution_spatial.cpp
+  src/endf.cpp
   src/initialize.cpp
   src/finalize.cpp
   src/geometry_aux.cpp
