Updates to CMakeLists after rebase.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -309,7 +309,7 @@ set_target_properties(faddeeva PROPERTIES
 # libopenmc
 #===============================================================================
 
-add_library(libopenmc SHARED
+set(LIBOPENMC_SRC SHARED
   src/algorithm.F90
   src/bank_header.F90
   src/api.F90
@@ -401,8 +401,6 @@ add_library(libopenmc SHARED
   src/tallies/tally_header.F90
   src/tallies/trigger.F90
   src/tallies/trigger_header.F90
-  src/cad.h
-  src/cad.cpp
   src/cell.cpp
   src/cmfd_execute.cpp
   src/distribution.cpp
@@ -451,11 +449,12 @@ add_library(libopenmc SHARED
 
 # add cad sources if enabled
 if(cad)
-  list(APPEND LIBOPENMC_FORTRAN_SRC src/cad_header.F90)
-  list(APPEND LIBOPENMC_CXX_SRC src/cad.h src/cad.cpp)
+  list(APPEND LIBOPENMC_SRC src/cad_header.F90)
+  list(APPEND LIBOPENMC_SRC src/cad.h src/cad.cpp)
 endif()
 
-add_library(libopenmc SHARED ${LIBOPENMC_FORTRAN_SRC} ${LIBOPENMC_CXX_SRC})
+add_library(libopenmc SHARED ${LIBOPENMC_SRC})
+
 set_target_properties(libopenmc PROPERTIES
   OUTPUT_NAME openmc
   LINKER_LANGUAGE Fortran)
@@ -498,7 +497,7 @@ endif()
 
 # target_link_libraries treats any arguments starting with - but not -l as
 # linker flags. Thus, we can pass both linker flags and libraries together.
-target_link_libraries(libopenmc ${ldflags} ${HDF5_LIBRARIES} pugixml_fortran
+target_link_libraries(libopenmc ${ldflags} ${HDF5_LIBRARIES} pugixml
                       faddeeva xtensor ${DAGMC_LIBRARIES})
 
 #===============================================================================
