Add new filter file in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -377,6 +377,7 @@ add_library(libopenmc SHARED
   src/tallies/tally_filter_surface.F90
   src/tallies/tally_filter_universe.F90
   src/tallies/tally_filter_zernike.F90
+  src/tallies/tally_filter_zernike_radial.F90
   src/tallies/tally_header.F90
   src/tallies/trigger.F90
   src/tallies/trigger_header.F90
